Changes for 2.0.0:

* Fixed issue #1 - Rename library namespace to a better name

Changes for 1.4.0:

* Fixed issue #4: Move non-arduino functions to the library namespace
* New feature: Renamed testWin32Arduino to win32Arduino_unittest.
* New feature: Renamed win32arduino to win32Arduino.

Changes for 1.3.39:

* New feature: Implemented support for forcing current time in SIMULATION mode.
* New feature: Implemented SREG and cli() function support
* New feature: Fixed analogWrite() signature
* New feature: Fixed constants definitions based on Arduino Nano v3 values
* New feature: Removed support for HIGH and LOW interrupts support which is creating too much confusion.

Changes for 1.2.30:

* New feature: Fixed tone() signature to match arduino's IDE.

Changes for 1.1.28:

* New feature: Implemented both simulated & realtime clock handling. The desired strategy is user selectable.

Changes for 1.0.21:

* First public release.