@@ -1,6 +1,7 @@
 Changes for 2.0.0:
 
-* Fixed issue #1 - Rename library namespace to a better name
+* Fixed issue #1 - Rename library namespace to a better name.
+* Fixed issue #3 - Remove template functions and replace by macro definitions.
 
 Changes for 1.4.0:
 
